Add tasks for grade 4 for Assignment04

--- a/work/s04/a04/views/lotto.ejs
+++ b/work/s04/a04/views/lotto.ejs
@@ -2,7 +2,7 @@
 
 <p>These are the lotto draws this time!</p>
 <ul>
-    <% for(const number of lotto) { %>
+    <% for(const number of lottoNumbers) { %>
         <li>
             <%= number %>
         </li>
