Change API calls to allow CORS
Change the API called to one that does allow CORS
There is much less data this way, but showcases the ability to do online API calls instead

--- a/work/s04/a04/public/report/schools/style/table.css
+++ b/work/s04/a04/public/report/schools/style/table.css
@@ -17,5 +17,6 @@ table, th, td {
 
 th {
     background-size: 10px 10px;
-    background-image: url(/websoft/work/report/me/img/ppoverheat.gif);
+    background: #ccc;
+    color: #000;
 }
