--- a/work/report/css/style.css
+++ b/work/report/css/style.css
@@ -10,3 +10,8 @@ body {
     background: #fff;
     width: 700px;
 }
+
+table, th, td {
+    border: 1px solid black;
+    background-color: cadetblue;
+  }
