--- a/work/report/css/style.css
+++ b/work/report/css/style.css
@@ -15,3 +15,14 @@ table, th, td {
     border: 1px solid black;
     background-color: cadetblue;
   }
+  .duck {
+    border: 1px solid black;
+    background: rgb(255, 255, 255);
+    background: rgba(255, 255, 255, 0.6);
+    position: relative;
+    margin: 0 auto;
+    height: 100px;
+    width: 100px;
+    font-size: 24px;
+    text-align: center;
+}
